--- a/Resources/layout/LoginUI.xml
+++ b/Resources/layout/LoginUI.xml
@@ -1,40 +1,55 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:minWidth="25px"
     android:minHeight="25px"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="#e6e6e6"
     android:id="@+id/linearLayout1">
-    <TextView
-        android:text="City Cinema"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/pagetitle"
-        android:gravity="center" />
+    <ImageView
+        android:src="@drawable/logo"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:id="@+id/imageView1"
+        android:layout_marginBottom="0.0dp" />
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:id="@+id/edituser"
-        tools:text="Username" />
+        android:hint="Username"/>
+   
     <EditText
         android:inputType="textPassword"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:id="@+id/editpass"
-        tools:text="Password"
+        android:hint="Password"
         android:password="false" />
+    <androidx.legacy.widget.Space
+        android:layout_width="match_parent"
+        android:layout_height="92.0dp"
+        android:id="@+id/space1" />
     <Button
         android:text="Login"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:id="@+id/btnlogin" />
+        android:layout_gravity="center"
+        android:backgroundTint="#dba622"
+        android:id="@+id/btnlogin"/>
     <Button
         android:text="Signup"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:id="@+id/btnsignup" />
+        android:layout_gravity="center"
+        android:backgroundTint="#cdccca"
+        android:textColor="#000000"
+        android:id="@+id/btnsignup"/>
 </LinearLayout>
