--- a/Resources/layout/LoginUI.xml
+++ b/Resources/layout/LoginUI.xml
@@ -12,7 +12,7 @@
     android:background="#e6e6e6"
     android:id="@+id/linearLayout1">
     <ImageView
-        android:src="@drawable/logo"
+        android:src="@drawable/Logo"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center"
