--- a/Resources/layout/movie1.xml
+++ b/Resources/layout/movie1.xml
@@ -8,9 +8,25 @@
     android:layout_height="match_parent"
     android:id="@+id/linearLayout1" >
     <TextView
-        android:text="Spider-Man"
+        android:text="Movie Name"
+        android:gravity="center"
+        android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView1" />
+    <TextView
+        android:text="Movie Description"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000"
+        android:id="@+id/textView2" />
+    <TextView
+        android:text="Movie Price"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000"
+        android:id="@+id/textView3" />
 </LinearLayout>
