--- a/Resources/layout/ViewCinema.xml
+++ b/Resources/layout/ViewCinema.xml
@@ -5,6 +5,52 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ImageView
+        android:src="@drawable/cinema"
+        android:layout_width="wrap_content"
+        android:layout_height="193.5dp"
+        android:id="@+id/imageView1" />
+    <TextView
+        android:text="@string/cinema"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:layout_below="@id/imageView1"
+        android:id="@+id/textView1" />
+    <Button
+        android:text="@string/cinema1"
+        android:textColor="@android:color/white"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:backgroundTint="#dba622"
+        android:layout_below="@id/textView1"
+        android:id="@+id/button1" />
+    <Button
+        android:text="@string/cinema2"
+        android:textColor="@android:color/white"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:backgroundTint="#dba622"
+        android:layout_below="@id/button1"
+        android:id="@+id/button2" />
+    <Button
+        android:text="@string/cinema3"
+        android:textColor="@android:color/white"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:backgroundTint="#dba622"
+        android:layout_below="@id/button2"
+        android:id="@+id/button3" />
+    <Button
+        android:text="Button"
+        android:textColor="@android:color/white"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:backgroundTint="#dba622"
+        android:layout_below="@id/button3"
+        android:id="@+id/button4" />
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
