--- a/Resources/layout/food1.xml
+++ b/Resources/layout/food1.xml
@@ -11,8 +11,15 @@
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:id="@+id/textView1" />
+    <TextView
+        android:text="Price"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView1"
+        android:id="@+id/textView3" />
 
     <TextView
         android:text="Price"
@@ -20,7 +27,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView1"
+        android:layout_below="@id/textView3"
         android:id="@+id/textView2" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
