--- a/Resources/layout/movie1.xml
+++ b/Resources/layout/movie1.xml
@@ -11,24 +11,73 @@
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:id="@+id/textView1" />
+    <TextView
+        android:text="Director"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView1"
+        android:id="@+id/textView6" />
+
+    <TextView
+        android:text="Movie Director"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:textColor="#000"
+        android:layout_below="@id/textView6"
+        android:id="@+id/textView3" />
+    <TextView
+        android:text="Year"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView3"
+        android:id="@+id/textView7" />
+
+    <TextView
+        android:text="Movie Year"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:textColor="#000"
+        android:layout_below="@id/textView7"
+        android:id="@+id/textView4" />
+    <TextView
+        android:text="Description"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView4"
+        android:id="@+id/textView8" />
+
     <TextView
         android:text="Movie Description"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView1"
+        android:layout_below="@id/textView8"
         android:textColor="#000"
-        android:id="@+id/textView2" />
+        android:id="@+id/textView5" />
+    <TextView
+        android:text="Ticket Price"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:gravity="bottom"
+        android:layout_below="@id/textView5"
+        android:id="@+id/textView9" />
+
     <TextView
         android:text="Movie Price"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
+        android:layout_below="@id/textView9"
         android:textColor="#000"
-        android:layout_below="@id/textView2"
-        android:id="@+id/textView3" />
+        android:id="@+id/textView2" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
