--- a/Resources/layout/cinema1.xml
+++ b/Resources/layout/cinema1.xml
@@ -4,22 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
+    android:gravity="center"
     android:layout_height="match_parent">
+    
 
     <TextView
-        android:text="CINEMA"
-        android:textStyle="bold"
+        android:text="Cinema Number"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView1" />
-    <ListView
-        android:minWidth="25px"
-        android:minHeight="25px"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <TextView
+        android:text="cinema_name(insert here)"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@id/textView1"
-        android:id="@+id/listView10" />
+        android:id="@+id/textView2" />
+    <TextView
+        android:text="Cinema Capacity"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView2"
+        android:id="@+id/textView3" />
+    <TextView
+        android:text="cinema_seats(inserthere)"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView3"
+        android:id="@+id/textView4" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="wrap_content"
@@ -30,5 +46,6 @@
         android:layout_alignParentBottom="true"
         app:labelVisibilityMode="labeled"
         app:menu="@menu/navigation" />
+
 
 </RelativeLayout>
